# hypergraph-properties

./: .gitignore  README.md  main.py  pyproject.toml
data/: ABCD-h_seed_1234_od_Bogumila.txt  ABCD_seed_42_small_he.txt  README.md
data/xgi/: InVS13.json  house-committees.json  hypertext-conference.json  senate-bills.json  senate-committees.json
notebooks/: Hyperedge_size_vs_degree.ipynb
src/hypergraph_properties/: __init__.py  pipeline.py
src/hypergraph_properties/hg_model/: __init__.py
src/hypergraph_properties/hg_pipeline/: __init__.py  pipeline.py  result_set.py
src/hypergraph_properties/hg_properties/: corr.py  corr_slow.py
src/hypergraph_properties/hg_reader/: __init__.py  readers.py  template.py
src/hypergraph_properties/reporting/: html.py  repository.py  result_set.py
src/hypergraph_properties/utils/: git_info.py  logger.py
tests/unit/: test_corr.py
