[project]
name = "hypergraph-properties"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aleksander Wojnarowicz", email = "alwojnarowicz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.5",
]

[project.scripts]
hypergraph-properties = "hypergraph_properties:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
