[project]
name = "hypergraph-properties"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aleksander Wojnarowicz", email = "alwojnarowicz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dominate>=2.9.1",
    "gitpython>=3.1.44",
    "jinja2>=3.1.6",
    "mypy>=1.15.0",
    "numba>=0.61.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.5",
]

[project.scripts]
hypergraph-properties = "hypergraph_properties:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
